[gd_scene load_steps=7 format=3 uid="uid://c7h4tmvgifs2m"]

[ext_resource type="Script" path="res://views/game/view_game.gd" id="1_nrv1c"]
[ext_resource type="Texture2D" uid="uid://c5pqx8w8slwcx" path="res://black.png" id="2_yiv4p"]
[ext_resource type="PackedScene" uid="uid://choanxxqmqoya" path="res://Entities/Wall/Wall.tscn" id="3_hkmk0"]
[ext_resource type="PackedScene" uid="uid://dm8wwt1qj026w" path="res://Entities/Brick/Brick.tscn" id="4_0o3cd"]
[ext_resource type="PackedScene" uid="uid://dpw04ests5p25" path="res://Entities/Slider/Slider.tscn" id="5_khsmy"]
[ext_resource type="PackedScene" uid="uid://tkvmhxh3xdqr" path="res://Entities/Ball/Ball.tscn" id="6_66tqf"]

[node name="Game" type="MarginContainer"]
custom_minimum_size = Vector2(800, 1000)
script = ExtResource("1_nrv1c")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(0.278431, 0.270588, 0.254902, 0.364706)
layout_mode = 2
texture = ExtResource("2_yiv4p")

[node name="Walls" type="Node2D" parent="."]

[node name="WallL" parent="Walls" instance=ExtResource("3_hkmk0")]
position = Vector2(10, 500)
scale = Vector2(1, 50)

[node name="WallL2" parent="Walls" instance=ExtResource("3_hkmk0")]
position = Vector2(10, 1060)
scale = Vector2(1, 6)

[node name="WallR" parent="Walls" instance=ExtResource("3_hkmk0")]
position = Vector2(790, 500)
scale = Vector2(1, 50)

[node name="WallR2" parent="Walls" instance=ExtResource("3_hkmk0")]
position = Vector2(790, 1060)
scale = Vector2(1, 6)

[node name="WallT" parent="Walls" instance=ExtResource("3_hkmk0")]
position = Vector2(400, 10)
scale = Vector2(40, 1)

[node name="WallB" parent="Walls" instance=ExtResource("3_hkmk0")]
position = Vector2(400, 1123)
scale = Vector2(40, 1)
Killer = true

[node name="Bricks" type="Node2D" parent="."]

[node name="Brick" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(686, 330)
level = 3
metadata/Killer = false
metadata/Level = 6

[node name="Brick2" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(79, 477)
rotation = 0.785398
level = 3
metadata/Killer = false
metadata/Level = 3

[node name="Brick11" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(623, 544)
rotation = 0.785398
level = 6
metadata/Killer = false
metadata/Level = 3

[node name="Brick3" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(421, 523)
level = 2
metadata/Killer = false
metadata/Level = 2

[node name="Brick10" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(423, 361)
level = 4
metadata/Killer = false
metadata/Level = 2

[node name="Brick4" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(474, 175)
level = 3
metadata/Killer = false

[node name="Brick5" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(625, 402)
level = 6
metadata/Killer = false
metadata/Level = 5

[node name="Brick6" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(124, 225)
level = 4
metadata/Killer = false

[node name="Brick14" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(727, 85)
level = 6
Unkillable = true
metadata/Killer = false

[node name="Brick7" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(343, 243)
level = 3
metadata/Killer = false
metadata/Level = 5

[node name="Brick8" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(146, 477)
level = 2
metadata/Killer = false
metadata/Level = 3

[node name="Brick12" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(145, 673)
level = 3
metadata/Killer = false
metadata/Level = 3

[node name="Brick9" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(236, 483)
rotation = 1.5708
level = 3
metadata/Killer = false
metadata/Level = 3

[node name="Brick15" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(574, 609)
metadata/Killer = false

[node name="Brick13" parent="Bricks" instance=ExtResource("4_0o3cd")]
position = Vector2(232, 634)
rotation = 1.5708
level = 3
metadata/Killer = false
metadata/Level = 3

[node name="Movers" type="Node2D" parent="."]

[node name="Slider" parent="Movers" instance=ExtResource("5_khsmy")]
position = Vector2(400, 900)

[node name="Fakeball" parent="Movers/Slider" instance=ExtResource("6_66tqf")]
modulate = Color(1, 0.478431, 0.478431, 1)
position = Vector2(-69, -39)
collision_layer = 2048
collision_mask = 2048
speed = 0.0

[node name="Ball" parent="Movers" instance=ExtResource("6_66tqf")]
position = Vector2(-109, 628)
speed = 800.0

[node name="start_timer" type="Timer" parent="Movers"]
one_shot = true
autostart = true

[connection signal="collided" from="Movers/Slider/Fakeball" to="." method="_on_ball_collided"]
[connection signal="collided" from="Movers/Ball" to="." method="_on_ball_collided"]
[connection signal="timeout" from="Movers/start_timer" to="." method="_on_start_timer_timeout"]
